# InMemoryDataBase

./: .clang-format  .travis.yml  CMakeLists.txt  Combiner.cpp  Combiner.h  CsvReader.cpp  CsvReader.h  DataAccessor.cpp  DataAccessor.h  DataContainer.cpp  DataContainer.h  DotaceForIcos.cpp  DotaceForIcos.h  Exceptions.h  IDataProvider.h  IReader.h  LoadingUtils.cpp  LoadingUtils.h  README.md  Tests.cpp  Types.h  Utilities.cpp  Utilities.h  cedr.cpp  cedr_new.cpp  csv_to_xlsx.cpp  distinct_copni.h  export1.cpp  export2.cpp  main.cpp  nno.cpp  nrzps_dotace.cpp  nrzps_subjekty.cpp  rpss_dotace.cpp  rpss_subjekty.cpp  test.cpp  ttt.cpp  xml_test.cpp  zdrav.cpp
ARES/: ZakladniUdaje.cpp  ZakladniUdaje.h
CLI/Headers/: AppContext.h  CLIController.h  ConsoleIO.h  ScriptParser.h
CLI/Source/: AppContext.cpp  CLIController.cpp  ConsoleIO.cpp  ScriptParser.cpp
DataAcessors/: DataAccessor.h
DataBase/: AggregationMaker.cpp  AggregationMaker.h
DataBase/Headers/: AggregationMaker.h  AggregationStructures.h  JoinMaker.h  MemoryDataBase.h  QueryParser.h  Relation.h  RelationBuilder.h
DataBase/Source/: AggregationMaker.cpp  AggregationStructures.cpp  JoinMaker.cpp  MemoryDataBase.cpp  QueryParser.cpp  Relation.cpp  RelationBuilder.cpp  RelationManager.cpp
DataBase/tests/: testTableString.h  tests_MemoryDataBase_catch.cpp
DataProviders/: ArrayDataProvider.cpp  ArrayDataProvider.h  CsvReader.cpp  CsvReader.h
DataProviders/Headers/: ArrayDataProvider.h  BaseDataProvider.h  CsvReader.h  CsvStreamReader.h  DataSetProvider.h  IDataProvider.h  RandomDataProvider.h  XlntReader.h  XlsReader.h  XlsxIOReader.h  XlsxReader.h
DataProviders/Source/: CsvReader.cpp  CsvStreamReader.cpp  DataSetProvider.cpp  RandomDataProvider.cpp  XlntReader.cpp  XlsReader.cpp  XlsxIOReader.cpp  XlsxReader.cpp
DataProviders/Sources/: CsvReader.cpp  IDataSet.cpp
DataProviders/tests/: tests_ArrayDataProveider_catch.cpp  tests_CsvReader.cpp  tests_CsvReader.h  tests_CsvReader_catch.cpp  tests_CsvStreamReader_catch.cpp  tests_XlsReader.cpp  tests_XlsReader_catch.cpp
DataSets/Headers/: Async_MemoryDataSet.h  BaseDataSet.h  DataSetDatabase.h  FilterStructures.h  MemoryDataSet.h  MemoryViewDataSet.h  MockDataSet.h  SortStructures.h  ViewDataSet.h
DataSets/Source/: Async_MemoryDataSet.cpp  BaseDataSet.cpp  DataSetDatabase.cpp  FilterStructures.cpp  MemoryDataSet.cpp  MemoryViewDataSet.cpp  ViewDataSet.cpp
DataSets/tests/: tests_AsyncMemoryDataSet_catch.cpp  tests_MemoryDataSet_catch.cpp
DataWorkers/: BaseDataWorker.cpp  BaseDataWorker.h
DataWorkers/Headers/: BaseDataWorker.h  DataSetMerger.h  FINMDataWorker.h  MemoryDataWorker.h  SQLParser.h
DataWorkers/Source/: DataSetMerger.cpp  FINMDataWorker.cpp  MemoryDataWorker.cpp
DataWorkers/tests/: Gtests_DataSetMerger.cpp  Gtests_DataWorkers.cpp  Gtests_SQLParser.cpp  tests_DataSetMerger.cpp  tests_DataSetMerger_catch.cpp  tests_DataWorker_catch.cpp  tests_DataWorkers.cpp  tests_SQLParser.cpp  tests_SQLParsers_catch.cpp
DataWriters/Headers/: ArrayWriter.h  BaseDataWriter.h  CsvWriter.h  EmptyWriter.h  OpenXSLXWriter.h  StdoutWriter.h  XlntWriter.h  XlsxIOWriter.h  XlsxWriter.h
DataWriters/Source/: ArrayWriter.cpp  BaseDataWriter.cpp  CsvWriter.cpp  EmptyWriter.cpp  OpenXSLXWriter.cpp  StdoutWriter.cpp  XlntWriter.cpp  XlsxIOWriter.cpp  XlsxWriter.cpp
DataWriters/Sources/: CsvWriter.cpp
DataWriters/tests/: tests_XslxWriter.cpp
Datasets/: AsyncMemoryDataset.cpp  AsyncMemoryDataset.h  Field.cpp  Field.h  FilterStructures.h  InMemorydataset.cpp  InMemorydataset.h  Memorydataset.cpp  Memorydataset.h
Datasets/Fields/: DoubleField.cpp  DoubleField.h  IntegerField.cpp  IntegerField.h  StringField.cpp  StringField.h
Datasets/Headers/: AsyncMemoryDataSet.h  AsyncMemoryDataSet1.h  Async_MemoryDataSet.h  BaseDataSet.h  FilterStructures.h  IDataSet.h  MemoryDataSet.h  MemoryViewDataSet.h  Memorydataset.h  SortStructures.h  ViewDataSet.h
Datasets/Source/: Async_MemoryDataSet.cpp  BaseDataSet.cpp  MemoryDataSet.cpp  MemoryViewDataSet.cpp
Datasets/Sources/: AsyncMemoryDataSet.cpp  AsyncMemoryDataSet1.cpp  AsyncMemoryDataset.cpp  Async_MemoryDataSet.cpp  MemoryDataSet.cpp  Memorydataset.cpp
Datasets/tests/: Gtests_MemoryDataset.cpp  tests_AsyncMemoryDataSet_catch.cpp  tests_AsyncMemoryDataset.cpp  tests_AsyncMemoryDataset.h  tests_MemoryDataSet_catch.cpp  tests_MemoryDataset.cpp  tests_MemoryDataset.h
FileDownloaders/Headers/: BaseFileDownloader.h  FileDownloadManager.h  FileDownloadObserver.h  FileDownloader.h
FileDownloaders/Source/: FileDownloadManager.cpp  FileDownloader.cpp
Interfaces/: IDataProvider.h  IDataset.cpp  IDataset.h  IDatasetPre.h  IField.cpp  IField.h  IFieldPre.h
Interfaces/Headers/: IDataProvider.h  IDataSet.h  IDataset.h  IField.h
Interfaces/Sources/: IDataSet.cpp  IDataset.cpp  IField.cpp
Messages/Headers/: Message.h  MessageManager.h  MessageReceiver.h  MessageSender.h
Messages/Source/: MessageManager.cpp  MessageReceiver.cpp  MessageSender.cpp
Misc/: Exceptions.h  Tests_Misc.h  Utilities.cpp  Utilities.h
Misc/Headers/: Catch2Define.h  Config.h  Converters.h  DateTimeUtils.h  Exceptions.h  FileManager.h  Lazy.h  Logger.h  Property.h  ResourceManager.h  ThreadPool.h  Types.h  Utilities.h
Misc/Source/: Config.cpp  Converters.cpp  DateTimeUtils.cpp  FileManager.cpp  ResourceManager.cpp  ThreadPool.cpp  Types.cpp  Utilities.cpp
Misc/Sources/: Utilities.cpp
Misc/tests/: Gtests_isDouble_isInteger.cpp  Gtests_splitStringByDelimiter.cpp  tests_isDouble_isInteger.cpp  tests_isDouble_isInteger.h  tests_splitStringByDelimiter.cpp  tests_stringToInt_Double.cpp  tests_stringToInt_Double.h  tests_utilities_catch.cpp
RelationLayer/Headers/: Relation.h  RelationManager.h  Relations.h
RelationLayer/Source/: Relation.cpp  Relations.cpp
Templates/Headers/: Bindable.h  Observable.h  Property.h  meta.h
utilities/config/: Config.tpp  JsonConfig.h  JsonConfig.tpp  XmlConfig.h  XmlConfig.tpp
utilities/containers/: Tree.h
utilities/error_handling/: exceptions.cpp  exceptions.h
utilities/graphics/: BoundingBox.tpp  (+1 more)
(+91 files in other folders)
